--- a/Antes.html
+++ b/Antes.html
@@ -13,7 +13,7 @@
         <header class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1>El universo de Dema</h1>
+                      <img id="cabecera" src="Cabecera.png" alt="Cabecera">
                     </div>
                 </div> 
                 <ul class="nav nav-tabs">
@@ -31,7 +31,7 @@
                                 <div class="dropdown-menu">
                                   <a class="dropdown-item" href="Dema.html">¿Qué es Dema?</a>
                                   <a class="dropdown-item" href="Videoclips.html">Videoclips</a>
-                                  <a class="dropdown-item" href="Teorias.html">Teorias</a>
+                                  
                                 </div>
                               </li>
                       </ul>
@@ -46,17 +46,17 @@
                 </div>
                 <br/>
                 <div class="col-xl-7 col-lg-7 col-md-12 col-sm-12">
-                  <h3>2011-2013:Regional at Best y contrato discográfico con Fueled by Ramen</h3>
+                  <h2>2011-2013:Regional at Best y contrato discográfico con Fueled by Ramen</h2>
                   <p>Su segundo álbum independiente, Regional at Best, fue lanzado el 8 de julio de 2011, fue grabado en su mayoría con los integrantes originales ya que se pueden ver varios vídeos en vivo de la banda tocando canciones de Regional at Best con Nick y Thomas, terminando luego con un nuevo alineamiento que solo consta de Joseph y Dun.
                       Se decidió que firmarían con el sello de Atlantic Records, subsidiada por Fueled by Ramen. Luego de firmar se inició la grabación de su próximo álbum, regrabando las anteriores y cancelando las ventas de RAB, es por eso que hay pocas unidades físicas originales.
                      Durante ese mismo año, el dúo dio a sus fans dos canciones inéditas a través de su boletín de correo electrónico: la versión original de "House of Gold" y una canción titulada "Two".</p>
                      <img id="logo1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Twenty_One_Pilots_logo.svg/220px-Twenty_One_Pilots_logo.svg.png" class="img-fluid"/>
-                     <p>Logo de la banda durante Regional at best y Vessel</p>
+                     <p id="piefoto1" >Logo de la banda durante Regional at best y Vessel</p>
                 </div>
                 <br/>
                 <br/>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                        <h4>2012-2014: Vessel, debut en televisión y Quiet Is Violent World Tour</h4>
+                        <h2>2012-2014: Vessel, debut en televisión y Quiet Is Violent World Tour</h2>
                         <p>El 17 de julio de 2012, lanzaron su álbum debut con Fueled by Ramen en forma de EP con tres canciones, titulado "Three Songs".
                             Vessel fue lanzado el 8 de enero de 2013 y obtuvo el puesto 58 en el Billboard 200, el 42 en la tabla de álbumes digitales, 17 en la tabla de álbumes de internet, 15 en la tabla de álbumes Rock y 10 en la tabla de álbumes Alternativos.
                             El grupo tuvo su primer éxito en las radios estadounidenses con "Holding on to You", que alcanzó el puesto 11 en la tabla Billboard Alternative Songs; adicionalmente, los sencillos "Guns For Hands" y "Lovely" alcanzaron el puesto 21 y 67 respectivamente en el Japan Hot 100.
@@ -66,7 +66,7 @@
                 </div>
                 <br/>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                        <h5>2015-2017: Blurryface y Emotional Roadshow World Tour</h5>
+                        <h2>2015-2017: Blurryface y Emotional Roadshow World Tour</h2>
                         <p>El 17 de mayo de 2015, Twenty One Pilots lanzó su cuarto álbum de estudio, Blurryface, 2 días antes de la fecha oficial de lanzamiento, el 19 de mayo de 2015.
                                 En febrero de 2016, la canción Stressed Out alcanzó el puesto No. 2 en el Billboard Top-Five Single. En marzo del mismo año, el álbum ya había vendido 792 000 copias sólo en Estados Unidos. Blurryface alcanzó también el puesto No. 1 en el Top Billboard 200.
                                 El 31 de mayo de 2016 comenzaba en Cincinnati lo que sería la segunda gira de Blurryface, Emotional Roadshow World Tour.
@@ -75,7 +75,7 @@
                                 El 12 de febrero del 2017, el dúo ganaría su primer Grammy en la categoría Mejor Dúo/Grupo Alternativo con su sencillo Stressed Out. A mitades de este mismo año, la banda en su cuenta oficial de Twitter anunció con unas cuantas fotos su descanso, el cuál sería denominado por los fanáticos como "Hiatus".</p>
                          <img id="logo2" src="https://img05.deviantart.net/6c11/i/2016/110/a/3/new_twenty_one_pilots_logo_____by_fieldsofdaisies-d9zlea7.png" class="img-fluid"/>
 
-                         <p>Logo durante la era de Blurryface</p>
+                         <p id="piefoto2" >Logo durante la era de Blurryface</p>
                 </div>
         </div>
 <!-- Optional JavaScript -->
