--- a/Dema.html
+++ b/Dema.html
@@ -13,7 +13,7 @@
         <header class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1>El universo de Dema</h1>
+                  <img id="cabecera" src="Cabecera.png" alt="Cabecera">
                 </div>
             </div>
             <ul class="nav nav-tabs">
@@ -31,7 +31,7 @@
                         <div class="dropdown-menu">
                           <a class="dropdown-item" href="Dema.html">¿Qué es Dema?</a>
                           <a class="dropdown-item" href="Videoclips.html">Videoclips</a>
-                          <a class="dropdown-item" href="Teorias.html">Teorias</a>
+                 
                         </div>
                       </li>
               </ul>
@@ -58,7 +58,17 @@
                         <br/>
                         El 8 de julio de 2018 se agregaron una fotografía y una carta. Esta fue la última actualización antes de que Jumpsuit y Nico And The Niners fueran lanzados.
                         <br/>
-                        El 18 de julio de 2018 se agregó otra carta de Clancy, esta vez describiendo el video de Jumpsuit.</p>
+                        El 18 de julio de 2018 se agregó otra carta de Clancy, esta vez describiendo el video de Jumpsuit.
+                    </br>
+                    Si quieres profundizar un poco más en el tema, estos son enlaces a videos de Youtube que explican detalladamente todo el proceso. Además, el enlace a la página web de Dema te permitirá ver todos los escritos de Clancy publicados
+                    </br> 
+                       <a id="demaweb" href="http://dmaorg.info/found/15398642_14/clancy.php">Web de Dema</a>
+                  </br>
+                       <a id="resumen" href="https://www.youtube.com/watch?v=0W-Bl1gONgE">Resumen</a>
+                </br> 
+                       <a id="significado" href="https://www.youtube.com/watch?v=T_cBH2nKN_A">Significado de la palabra Dema</a>
+                      
+                      </p>
 
                     </br>
                         <img id="mapa" src="https://res.cloudinary.com/teepublic/image/private/s--dvFk1neR--/t_Preview/b_rgb:191919,t_Watermark/c_limit,f_jpg,h_630,q_90,w_630/v1550024244/production/designs/4191442_0.jpg" class="img-fluid"/>
