--- a/Quienes.html
+++ b/Quienes.html
@@ -13,7 +13,7 @@
         <header class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1>El universo de Dema</h1>
+                  <img id="cabecera" src="Cabecera.png" alt="Cabecera">
                 </div>
             </div>
             <ul class="nav nav-tabs">
@@ -31,7 +31,7 @@
                         <div class="dropdown-menu">
                           <a class="dropdown-item" href="Dema.html">¿Qué es Dema?</a>
                           <a class="dropdown-item" href="Videoclips.html">Videoclips</a>
-                          <a class="dropdown-item" href="Teorias.html">Teorias</a>
+                          
                         </div>
                       </li>
               </ul>
